--- a/css/26-inheritance-specificity.css
+++ b/css/26-inheritance-specificity.css
@@ -1,4 +1,39 @@
+/* 선택자 depth는 최대한 간결하게 */
+
 body {
   font-family: "SUIT";
-  font-weight: 300;
+  font-weight: 700;
+}
+
+.menu {
+  color: gray;
+  font-size: 36px;
+  border: 5px green dashed;
+  /* border 속성은 상속되지 않음 */
+}
+
+/* 선택자가 많을수록, 아래에 위치할수록 더 우선 */
+ul.menu li.pick {
+  background-color: greenyellow;
+}
+.menu .pick {
+  background-color: blue;
+}
+.menu li {
+  background-color: pink;
+}
+li.pick {
+  background-color: orange;
+}
+.pick {
+  background-color: yellow;
+}
+
+/* .pick < .menu li < li.pick < .menu .pick < ul.menu li <  ul.menu li.pick < !important(tip. 선택자 우선순위를 확인할 때 사용) */
+
+.menu a {
+  color: inherit;
+  /* border: inherit; */
+  /* inherit은 바로 위 요소를 상속함.*/
+  /* 일부 CSS 속성 값은 상속되지 않음. 예) width, border 등*/
 }
