--- a/css/27-font.css
+++ b/css/27-font.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;700&display=swap");
-
 html {
   font-size: 0.625em;
   /* 16 * 0.625 = 10 */
@@ -10,25 +8,32 @@ body {
   font-size: 1rem;
   /* root를 기준으로 계산 */
   /* root-font-size * rem */
-  font-family: Georgia, "Times New Roman", Times, serif;
-  /* Gor~ Times 컴퓨터에 내장된 폰트 */
+  font-family: "Noto Serif KR", serif;
   /* serif => 글꼴군 */
   /* serif = 날카로운, 삐침이 있는 글꼴 */
   /* sans-serif = 고딕체 */
   /* 글꼴군을 설정해야 대체 폰트가 없을 경우에도 동일한 환경을 제공함 */
+  /* 노토 산스는 어도비와 구글의 합작 */
+  /* 스포카 한 산스는 어도비가 제공하는 이름 */
 }
 
 h1 {
   font-size: 3em;
-  font-family: "Noto Sans KR", sans-serif;
+  /* font-family: "Noto Sans KR", sans-serif; */
   /* font-size: 200%; */
   /* font에서는 동일하나 여백에서는 em 단위와 백분율이 다를 수 있음 */
 }
 
+div {
+  /* font-size: 0.625em; */
+}
+
 p {
   font-size: 2em;
-  line-height: 1.5em;
-  /* 넘버 단위 = 단위를 붙이지 않은 숫자. 현재 글자 크기 * 넘버단위 */
+  line-height: 2;
+  line-height: 2em;
+  /* 넘버 단위 = 단위를 붙이지 않은 숫자. 
+  현재 글자 크기 * 넘버단위 */
   /* line-height는 font-size가 없을 경우 상속받은 값을 기준으로 함 */
   /* em 단위는 line-height에서 사용 자제 */
   font-weight: 100;
